# goefivar

./: BUILD.bazel  BUILD.efivar  README.md  WORKSPACE  go.mod
cmd/efibootedit/: BUILD.bazel  efibootedit.go
efiboot/: BUILD.bazel  efiboot.go  efiboot_test.go
efivar/: BUILD.bazel  efivar.go  efivar_test.go
