load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["efiboot.go"],
    cdeps = [
        "@efivar//:efiboot",
    ],
    cgo = True,
    importpath = "github.com/lukegb/goefivar/efiboot",
    visibility = ["//visibility:public"],
    deps = ["//efivar:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["efiboot_test.go"],
    embed = [":go_default_library"],
    deps = ["//efivar:go_default_library"],
)
