load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["efivar.go"],
    cdeps = [
        "@efivar//:efivar",
    ],
    cgo = True,
    importpath = "github.com/lukegb/goefivar/efivar",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["efivar_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)
