load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["efibootedit.go"],
    importpath = "github.com/lukegb/goefivar/cmd/efibootedit",
    visibility = ["//visibility:private"],
    deps = [
        "//efiboot:go_default_library",
        "//efivar:go_default_library",
    ],
)

go_binary(
    name = "efibootedit",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
